--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-node_modules
-.env
+# Expo
 .expo
+__generated__
+web-build
+
+# macOS
+.DS_Store
+
+# Node
+node_modules
+npm-debug.log
+yarn-error.log
+
+# Enviornment Variables
+.env
