--- a/expo-client/package.json
+++ b/expo-client/package.json
@@ -17,6 +17,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-location": "~12.0.4",
     "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -27,6 +28,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
